--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^0.27.2",
     "pinia": "^2.0.16",
+    "sass": "^1.53.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
