--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.15",
     "axios": "^0.27.2",
+    "element-plus": "^2.2.12",
     "pinia": "^2.0.16",
     "sass": "^1.53.0",
     "vue": "^3.2.37",
