--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "pinia": "^2.0.16",
     "sass": "^1.53.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
-  },
-  "devDependencies": {
+    "vue-router": "^4.1.2",
     "@vitejs/plugin-vue": "^3.0.0",
     "vite": "^3.0.0"
+  },
+  "devDependencies": {
   }
 }
