--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           FOLDER: ./ # 要推送的文件夹，路径相对于代码仓库的根目录
           SERVER_IP: ${{ secrets.SSH_HOST }} # 引用配置，服务器的host名（IP或者域名domain.com）
           USERNAME: ${{ secrets.SSH_USERNAME }} # 引用配置，服务器登录名
-          SERVER_DESTINATION: /home/ubuntu/blog/frontend # 部署到目标文件夹
+          SERVER_DESTINATION: /home/ubuntu/blog/page # 部署到目标文件夹
       - name: Restart server # 第三步，重启服务
         uses: appleboy/ssh-action@master
         with:
@@ -33,8 +33,7 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           # 重启的脚本，根据自身情况做相应改动，一般要做的是migrate数据库以及重启服务器
           script: |
-            cp /home/ubuntu/private/blog-frontend-private.js /home/ubuntu/blog/frontend/src/private.js
-            cd /home/ubuntu/blog/frontend
+            cd /home/ubuntu/blog/page
             docker build -t ${{ secrets.DOCKER_REPOSITORY }} .
             docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
             docker push ${{ secrets.DOCKER_REPOSITORY }}:latest
@@ -50,9 +49,9 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.DEPLOY_KEY }}
           script: |
-            docker stop blog-frontend
-            docker container rm blog-frontend
+            docker stop blog-page
+            docker container rm blog-page
             docker image rm ${{ secrets.DOCKER_REPOSITORY }}:latest -f | true
             docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
             docker pull ${{ secrets.DOCKER_REPOSITORY }}:latest
-            docker run -d -p 7070:80 --name blog-frontend ${{ secrets.DOCKER_REPOSITORY }}
+            docker run -d -p 4003:80 --name blog-page ${{ secrets.DOCKER_REPOSITORY }}
